# InvoraLite

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
docs/: AUTO_UPDATE.md  DATABASE_ARCHITECTURE.md  InvoraLite_Product_Review.html  InvoraLite_Product_Review.md  InvoraLite_User_Manual.html  InvoraLite_User_Manual.md  LICENSE_ISSUANCE.md  Offer_Types_Master_Reference.md
e2e/: README.md  smoke.spec.ts
installer-shell/: Cargo.toml  build.rs
installer-shell/assets/: index.html
installer-shell/src/: main.rs
license/: .env.example  Invora-License.ps1  issue-key.cjs  pack-license.cjs
public/: theme-init.js
scripts/: generate-doc-pdf.mjs  generate-installer-brand.ps1  generate-user-manual-pdf.mjs  tauri-build.ps1  tauri-dev.ps1  with-msvc.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  EULA.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/keys/: README.md  invoralite.key.pub
src-tauri/src/: backup.rs  database.rs  device.rs  lib.rs  license.rs  main.rs  password.rs
src-tauri/src/db/: audit_repo.rs  auth_security.rs  backup_archive.rs  config.rs  encryption_key.rs  errors.rs  health.rs  integration_tests.rs  manager.rs  mod.rs  rbac.rs  schema.rs  sql_guard.rs  storage_repository.rs  validation.rs
src-tauri/windows/: installer-hooks.nsh  installer.nsi
src/components/: AccessRestricted.tsx  AppIcon.tsx  AuditLogPanel.tsx  BackupPasswordDialog.tsx  CategorySelect.tsx  ChartValueTooltip.tsx  ConfirmDialog.tsx  SaveButton.tsx  (+34 more)
(+106 files in other folders)
