[package]
name = "invora-installer"
version = "1.0.1"
edition = "2021"
description = "InvoraLite HTML installer shell"

[dependencies]
tao = "0.30"
wry = "0.47"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }

[build-dependencies]
winres = "0.1"
