[package]
name = "invora"
version = "1.0.0"
description = "Invora — offline inventory management"
authors = ["Gyan B. Baraily"]
edition = "2021"

[lib]
name = "invora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite", "backup"] }
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
machine-uid = "0.5"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
zip = { version = "2.2", default-features = true, features = ["aes-crypto"] }
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
subtle = "2"

[target.'cfg(windows)'.dependencies]
windows-dpapi = "0.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"

[dev-dependencies]
serial_test = "3"
